Make sure that the JAR checksums are not included inside the shaded JAR, as this causes errors.

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,9 @@
                         <configuration>
                             <artifactSet>
                                 <excludes>
-                                    <exclude>org.apache.spark</exclude>
+                                    <exclude>META-INF/*.DSA</exclude>
+                                    <exclude>META-INF/*.RSA</exclude>
+                                    <exclude>META-INF/*.SF</exclude>
                                 </excludes>
                             </artifactSet>
                         </configuration>
